Correccion de Document y enbebido